--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
 # Backend node modules
 backend/node_modules/
-backend/.env
 backend/uploads/
+backend/package-lock.json
 
 # Frontend node modules
 frontend/node_modules/
 frontend/.angular/
 frontend/dist/
+frontend/package-lock.json
 
 # Logs
 *.log
